--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,8 +12,11 @@ phases:
     commands:
       - ng build -c production
 artifacts:
-  base-directory: dist/my-angular-project
+  # base-directory: dist/my-angular-project
   files:
     - 'dist/my-angular-project/**/*'
     - appspec.yml
     - 'deploy-scripts/**/*'
+cache:
+  paths:
+    - node_modules/**/*
