--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: dist/
+  - source: dist/my-angular-project
     destination: /var/www/my-angular-project
 permissions:
   - object: /var/www/my-angular-project
@@ -16,4 +16,3 @@ hooks:
   ApplicationStart:
     - location: deploy-scripts/application-start-hook.sh
       timeout: 300
-      
